# Ray-tracer

./: .gitignore  CMakeLists.txt
res/Measurements/Debug/: data-3840x2160.csv
res/Measurements/Release/: CPU.txt  data-1366x768.csv  data-1920x1080.csv  data-2560x1440.csv  data-3840x2160.csv
res/Shaders/: FragShader.txt  VertShader.txt
src/: Camera.cpp  Camera.h  Diffuse.cpp  Diffuse.h  GCP_GFX_Framework.cpp  GCP_GFX_Framework.h  Main.cpp  Material.h  Object.cpp  Object.h  PBR.cpp  PBR.h  Plane.cpp  Plane.h  PointLight.cpp  PointLight.h  Ray.h  RayTracer.cpp  RayTracer.h  Specular.cpp  Specular.h  Sphere.cpp  Sphere.h  random_floats.h
